[gd_scene load_steps=13 format=3 uid="uid://7t51kfycui40"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_ufrha"]
[ext_resource type="PackedScene" uid="uid://bogg1nhk6n5xa" path="res://models/Katana.blend" id="2_fkwrn"]
[ext_resource type="PackedScene" uid="uid://dg5r2pmmwflg0" path="res://objects/health_bar.tscn" id="3_bxfjs"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_8hcyo"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_q25w0"]

[sub_resource type="BoxMesh" id="BoxMesh_lex4t"]
size = Vector3(0.5, 0.2, 1)

[sub_resource type="ViewportTexture" id="ViewportTexture_yxdwc"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_427ww"]
resource_name = "ATTACK"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/Katana:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, -1.29277), Vector3(-0.143007, 2.67736, -1.74093), Vector3(-1.40438, 0, 2.93205)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/Katana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.591498, 0.465848, -0.496389), Vector3(-0.643113, -0.0337077, -0.496389), Vector3(0.591498, 0, -0.164854)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"attack_end"
}]
}

[sub_resource type="Animation" id="Animation_kunky"]
resource_name = "IDLE"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/Katana:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.40438, 0, 2.93205)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/Katana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.591498, 0, -0.164854)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_8wfrm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D/Katana:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.40438, 0, 2.93205)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MeshInstance3D/Katana:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.591498, 0, -0.164854)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MeshInstance3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_f12dq"]
resource_name = "WALK"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.2, 0), Vector3(0, 0, 0), Vector3(0, -0.2, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mbqbd"]
_data = {
"ATTACK": SubResource("Animation_427ww"),
"IDLE": SubResource("Animation_kunky"),
"RESET": SubResource("Animation_8wfrm"),
"WALK": SubResource("Animation_f12dq")
}

[node name="Player" type="CharacterBody3D" groups=["friendly"]]
script = ExtResource("1_ufrha")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_8hcyo")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_q25w0")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -0.5)
mesh = SubResource("BoxMesh_lex4t")
skeleton = NodePath("../..")

[node name="Katana" parent="MeshInstance3D" instance=ExtResource("2_fkwrn")]
transform = Transform3D(-0.978126, -0.208013, 0, 0.0344571, -0.162026, 0.986184, -0.205139, 0.964613, 0.165649, 0.591498, 0, -0.164854)

[node name="PlayerRotation" type="Node3D" parent="."]

[node name="ProjectileSpawner" type="Node3D" parent="PlayerRotation"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1)

[node name="Area3D" type="Area3D" parent="." groups=["friendly"]]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CapsuleShape3D_8hcyo")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.226, 0, 1.2, 0)
billboard = 1
texture = SubResource("ViewportTexture_yxdwc")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(500, 200)

[node name="HealthBar" parent="SubViewport" instance=ExtResource("3_bxfjs")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mbqbd")
}
